[gd_scene load_steps=19 format=2]

[ext_resource path="res://Mosquito.gd" type="Script" id=1]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010000.png" type="Texture" id=2]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010001.png" type="Texture" id=3]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010002.png" type="Texture" id=4]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010003.png" type="Texture" id=5]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010004.png" type="Texture" id=6]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010005.png" type="Texture" id=7]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010006.png" type="Texture" id=8]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010007.png" type="Texture" id=9]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010008.png" type="Texture" id=10]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010009.png" type="Texture" id=11]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010010.png" type="Texture" id=12]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010011.png" type="Texture" id=13]
[ext_resource path="res://sprites/SPLAT.png" type="Texture" id=14]
[ext_resource path="res://sounds/mosquito-buzz.wav" type="AudioStream" id=15]
[ext_resource path="res://sounds/splat-1.wav" type="AudioStream" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "flying",
"speed": 20.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": false,
"name": "squish",
"speed": 0.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 60.4507

[node name="Mosquito" type="KinematicBody2D"]
input_pickable = true
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "flying"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 32.0715 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -2.29082, 26.7262 )
scale = Vector2( 2.14541, 2.14541 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="FeedTimer" type="Timer" parent="."]

[node name="Buzz" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -15.0

[node name="Splat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -5.0

[connection signal="input_event" from="." to="." method="_on_Mosquito_input_event"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="FeedTimer" to="." method="_on_FeedTimer_timeout"]
[connection signal="finished" from="Buzz" to="." method="_on_Buzz_finished"]
